# ruble_tracker

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/: celerybeat-schedule  manage.py
src/rates/: admin.py  models.py  serializers.py  urls.py  views.py
src/rates/migrations/: 0001_initial.py
src/ruble_tracker/: asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
